scrollbar fix

--- a/darcula.less
+++ b/darcula.less
@@ -129,9 +129,9 @@
 @button-focus-fg: @text-default;
 @button-panel-bg: #4C5052;
 @button-panel-hover: #4C5052;
-@scrollbar: #4D4D4D;
-@scroll-trough: #4D4D4D;
-@scrollbar-inactive: #4D4D4D;
+@scrollbar: #565656;
+@scroll-trough: #3C3F41;
+@scrollbar-inactive: #3C3F41;
 @box-shadow: #3e4444; 
 @md-header-link: rgba(0, 0, 0, .32);
 
